[EM-9] Add GET /api/admins endpoint
Add necesary DTO, Service and Controller
Update docs/api_contract.yaml
